# bevy_javelin

./: Cargo.toml  README.md
assets/: fireball.wgsl  smoke.glb  smoke_dissolve.wgsl
examples/: chaining.rs  fireball.rs  parabolic.rs
src/: builder.rs  bundle.rs  cluster.rs  control.rs  hierarchy.rs  lib.rs  loading.rs  spawning.rs  traits.rs  util.rs
texture/: Cargo.toml
texture/examples/: image_test.rs
texture/src/: distortion.rs  lazy.rs  lib.rs  noise.rs  util.rs  voronoi.rs
