[package]
name = "bevy_javelin"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["texture"]

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = ["bevy_pbr", "bevy_sprite"]}
fastrand = "2.3.0"

[dev-dependencies]
bevy = { version = "0.16.0" }
bevy_texture_gen = { path = "./texture" }
ramp_gen = "0.1.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1
